--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
