--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "add": "^2.0.6",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input": "^1.0.1",
     "lucide-react": "^0.400.0",
+    "popover": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
