adding the local storage  saving funcnality

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dropdown-menu": "^0.1.1",
     "input": "^1.0.1",
     "lucide-react": "^0.400.0",
     "popover": "^2.4.1",
