--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "start": "node --watch --env-file=.env index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4"
   }
 }
