--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "add": "^2.0.6",
+    "axios": "^1.7.2",
     "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
