--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4"
+    "moment": "^2.30.1",
+    "mongoose": "^8.4.4",
+    "nanoid": "^5.0.7"
   }
 }
