--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7"
   }
 }
