--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,19 @@
     "start": "node --watch --env-file=.env index.js"
   },
   "dependencies": {
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "face-api.js": "^0.22.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "tesseract.js": "^5.1.0"
   }
 }
