--- a/bot/package.json
+++ b/bot/package.json
@@ -21,7 +21,10 @@
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
     "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
+    "path": "^0.12.7",
     "pm2": "^5.4.2",
-    "tesseract.js": "^5.1.0"
+    "tesseract.js": "^5.1.0",
+    "url": "^0.11.3"
   }
 }
