added the toml file

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_GOOGLE_CLIENT_ID=724669682889-vkqm2qats7ns7uu6t6kr141m0b7crfja.apps.googleusercontent.com
-VITE_API_URL=https://aikyc-api.onrender.com/api
+VITE_API_URL=https://ai-kyc-server.onrender.com
